adds bento, improves library pages
